# amigasprite

./: CMakeLists.txt  CMakeLists.txt~  README.md  amigasprite-0.1.1-Linux.deb
src/: main.c
